--- a/homework/09-17/page.html
+++ b/homework/09-17/page.html
@@ -4,12 +4,10 @@
   <head>
     <title>Rotating cogs</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="utils.js"></script>
-    <script src="draw.js" defer></script>
+    <script src="draw.js" defer type="module"></script>
   </head>
   <body>
-
-   <canvas id="canvas"></canvas>
+   <canvas id="canvas" height="400" width="600"></canvas>
 
 
   </body>
