--- a/homework/fractals/draw.html
+++ b/homework/fractals/draw.html
@@ -33,40 +33,41 @@
     }
   
     // Recursive draw 
-    function recursiveDraw(step) {
+    function recursiveDraw(step, color = null) {
       if (step > 0) {
         step = step-1; 
 
         // TOP LEFT
         ctx.save();
         ctx.transform(-0.5, 0, 0, 0.5, 0.5*dim, 0); 
-        recursiveDraw(step); 
+        recursiveDraw(step, color ? color : "red"); 
         ctx.restore();
 
         //TOP RIGHT
         ctx.save();
         ctx.transform(0, -0.5, -0.5, 0, dim, 0.5*dim); 
-        recursiveDraw(step); 
+        recursiveDraw(step, color ? color : "green"); 
         ctx.restore();
         
 
         // BOTTOM RIGHT
         ctx.save()
         ctx.transform(0, -0.25, 0.25, 0, 0.5*dim, 0.75*dim);  
-        recursiveDraw(step);
+        recursiveDraw(step, color ? color : "blue");
         ctx.restore();
         
         // BOTTOM LEFT
         ctx.save()
         ctx.transform(0.5, 0, 0, 0.5, 0, 0.5*dim); 
-        recursiveDraw(step); 
+        recursiveDraw(step, color ? color : "orange"); 
         ctx.restore()
 
         }
-      else drawT();    
+      else drawT(color);    
     }       
   
-    function drawT() {
+    function drawT(color) {
+      ctx.fillStyle = color ? color : "black";
       ctx.beginPath();
       ctx.moveTo(0  ,0);
       ctx.lineTo(dim,0);
@@ -80,7 +81,7 @@
  <body onload="draw();">
    <h1>https://klevas.mif.vu.lt/~rimask/old/fractals/35.png</h1>
    <div>
-    <input type="range" value="6" min="1" max="8" class="slider" id="myRange" oninput="redraw(value)">
+    <input type="range" value="6" min="0" max="8" class="slider" id="myRange" oninput="redraw(value)">
     <span id="recursion_value">6</span>
   </div>
    <div>
