--- a/homework/fractals/animate.html
+++ b/homework/fractals/animate.html
@@ -2,11 +2,11 @@
 
 <head>
   <script type="application/javascript">
-
-    const begin_y = 0
     const dim = 500
-    let recursion_depth = 6
-
+    const animation_time_ms = 2500;
+    const wait_time_s = 0.5
+    const wait_time = wait_time_s*1000/animation_time_ms
+    
     function redraw(value) {
       recursion_depth = value;
       document.getElementById("recursion_value").textContent = value
@@ -21,15 +21,38 @@
   
 
     function draw(time) {
+      console.log(time)
       let ctx = null
       init_time =  init_time ? init_time : time;
       let canvas = document.getElementById('canvas');
       if (canvas.getContext) {
-        ctx = canvas.getContext("2d");
+        ctx = canvas.getContext("2d")
         clearCanvas(ctx)
         drawBorder(ctx)
-        animate(ctx, time, {skew_x:250 , skew_y:250});
-        window.requestAnimationFrame(draw)
+        let delta = get_delta_scale(time);
+        if (delta > 0) {
+          localDelta = Math.min(delta,1)
+          ctx.fillStyle = "blue"
+          animate(ctx, localDelta, {skew_x:250 , skew_y:375, scale: 0.25, rotate: -90});
+        }
+        if (delta > (1 + wait_time)) {
+          localDelta = Math.min(delta-(1+ wait_time),1)
+          ctx.fillStyle = "orange"
+          animate(ctx, localDelta, {skew_x:0 , skew_y:250, scale: 0.5});
+        }
+        if (delta > 2 *(1+ wait_time)) {
+          localDelta = Math.min(delta-2*(1+ wait_time),1)
+          ctx.fillStyle = "green"
+          animate(ctx, localDelta, {skew_x:500 , skew_y:250, scale: 0.5, rotate:-90, flip:true});
+        }
+        if (delta > 3 * (1+ wait_time)) {
+          localDelta = Math.min(delta-3*(1+ wait_time),1)
+          ctx.fillStyle = "red"
+          animate(ctx, localDelta, {skew_x:250 , skew_y:0, scale: 0.5, flip:true});
+        }
+        if (delta < 4* (1+ wait_time)) {
+          window.requestAnimationFrame(draw)
+        }
       }
 
        function drawBorder(ctx) {
@@ -45,52 +68,30 @@
       function clearCanvas(ctx) {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
       }
+
+
+      function get_delta_scale(time){
+        let real_delta = time - init_time
+            return real_delta/animation_time_ms
+      }
       
-      function animate(ctx, time, {skew_x =0 , skew_y = 0, rotate = 0, scale = 1}) {
-        console.log(time)
-        const anim_time = 2000
-        const delta = Math.min(time - init_time / anim_time, 1)
+      function animate(ctx, delta, {skew_x = 0 , skew_y = 0, rotate = 0, scale = 1, flip = false}) {
+        ctx.save()
+        //MOVE
         ctx.transform(1,0,0,1,delta * skew_x, delta * skew_y)
+        //FLIP && SCALE
+        flip_delta = 1
+        if (flip)
+          flip_delta = 1-2*delta
+        let _scale = 1-delta + delta*scale;
+        ctx.transform(_scale* flip_delta,0,0,_scale,0,0) 
+        //ROTATE
+        ctx.rotate(Math.PI*2*rotate/360  * delta)
         drawT()
+        ctx.restore();
       }
 
-
-      // Recursive draw 
-      function recursiveDraw(step, color = null) {
-        if (step > 0) {
-          step = step - 1;
-
-          // TOP LEFT
-          ctx.save();
-          ctx.transform(-0.5, 0, 0, 0.5, 0.5 * dim, 0);
-          recursiveDraw(step, color ? color : "red");
-          ctx.restore();
-
-          //TOP RIGHT
-          ctx.save();
-          ctx.transform(0, -0.5, -0.5, 0, dim, 0.5 * dim);
-          recursiveDraw(step, color ? color : "green");
-          ctx.restore();
-
-
-          // BOTTOM RIGHT
-          ctx.save()
-          ctx.transform(0, -0.25, 0.25, 0, 0.5 * dim, 0.75 * dim);
-          recursiveDraw(step, color ? color : "blue");
-          ctx.restore();
-
-          // BOTTOM LEFT
-          ctx.save()
-          ctx.transform(0.5, 0, 0, 0.5, 0, 0.5 * dim);
-          recursiveDraw(step, color ? color : "orange");
-          ctx.restore()
-
-        }
-        else drawT(color);
-      }
-
-      function drawT(color) {
-        ctx.fillStyle = color ? color : "black";
+      function drawT() {
         ctx.beginPath();
         ctx.moveTo(0, 0);
         ctx.lineTo(dim, 0);
@@ -106,6 +107,7 @@
   <h1>https://klevas.mif.vu.lt/~rimask/old/fractals/35.png</h1>
   <div>
     <canvas id="canvas" width="540" height="540"></canvas>
+    <img src="https://klevas.mif.vu.lt/~rimask/old/fractals/35.png">
   </div>
 </body>
 
