almost finished animating

--- a/homework/threejs/animation/animation.html
+++ b/homework/threejs/animation/animation.html
@@ -4,12 +4,9 @@
 
 <head>
     <title>2RP</title>
-    <script type="text/javascript" src="../keyboardController.js"></script>
     <script type="text/javascript" src="../libs/three.js"></script>
-    <script type="text/javascript" src="../libs/stats.js"></script>
-    <script type="text/javascript" src="../libs/dat.gui.js"></script>
     <script type="text/javascript" src="../libs/controls.js"></script>
-    <script type="text/javascript" src="../task2_2RP.js"></script>
+    <script type="text/javascript" src="./animation.js"></script>
    
     <style>
         body{
