moved funtions to seperate files

--- a/homework/threejs/texturing/texturing.html
+++ b/homework/threejs/texturing/texturing.html
@@ -8,8 +8,9 @@
     <script type="text/javascript" src="../libs/controls.js"></script>
     <script type="text/javascript" src="../libs/convexGeometry.js"></script>
     <script type="text/javascript" src="../libs/quickHull.js"></script>
-    <script type="text/javascript" src="./texturing.js"></script>
-   
+    <script type="module" src="./texturing.js"></script>
+    <script type="module" src="./pointGeneration.js"></script>
+    <script type="module" src="./sceneUtils.js"></script>
     <style>
         body{
             /* set margin to 0 and overflow to hidden, to go fullscreen */
