--- a/homework/threejs/camera/camera.html
+++ b/homework/threejs/camera/camera.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="../libs/controls.js"></script>
     <script type="module" src="./camera.js"></script>
     <script type="module" src="./mesh.js"></script>
+    <script type="module" src="./animation.js"></script>
+    <script type="module" src="./dat.gui.module.js"></script>    
     <style>
         body{
             /* set margin to 0 and overflow to hidden, to go fullscreen */
@@ -18,6 +20,5 @@
 </head>
 <body>
         <div id="WebGL-output"></div>
-    
 </body>
 </html>
