--- a/homework/threejs/stairs/stairs.html
+++ b/homework/threejs/stairs/stairs.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Example 01.03 - Materials and light</title>
+    <title>Stairs</title>
     <script type="text/javascript" src="../libs/three.js"></script>
     <script
 			  src="https://code.jquery.com/jquery-1.12.4.min.js"
