updated script path

--- a/homework/threejs/R2P/task2_R2P.html
+++ b/homework/threejs/R2P/task2_R2P.html
@@ -4,11 +4,10 @@
 
 <head>
     <title>R2P</title>
-    <script type="text/javascript" src="../../utils/keyboardController.js"></script>
-    <script type="text/javascript" src="../../libs/three.js"></script>
-    <script type="text/javascript" src="../../libs/stats.js"></script>
-    <script type="text/javascript" src="../../libs/dat.gui.js"></script>
-    <script type="text/javascript" src="../../libs/controls.js"></script>
+    <script type="text/javascript" src="../utils/keyboardController.js"></script>
+    <script type="text/javascript" src="../libs/three.js"></script>
+    <script type="text/javascript" src="../libs/stats.js"></script>
+    <script type="text/javascript" src="../libs/controls.js"></script>
     <script type="text/javascript" src="./task2_R2P.js"></script>
    
     <style>
