--- a/homework/threejs/2RP/task2_2RP.html
+++ b/homework/threejs/2RP/task2_2RP.html
@@ -4,11 +4,11 @@
 
 <head>
     <title>2RP</title>
-    <script type="text/javascript" src="../../utils/keyboardController.js"></script>
-    <script type="text/javascript" src="../../libs/three.js"></script>
-    <script type="text/javascript" src="../../libs/stats.js"></script>
-    <script type="text/javascript" src="../../libs/dat.gui.js"></script>
-    <script type="text/javascript" src="../../libs/controls.js"></script>
+    <script type="text/javascript" src="../utils/keyboardController.js"></script>
+    <script type="text/javascript" src="../libs/three.js"></script>
+    <script type="text/javascript" src="../libs/stats.js"></script>
+    <script type="text/javascript" src="../libs/dat.gui.js"></script>
+    <script type="text/javascript" src="../libs/controls.js"></script>
     <script type="text/javascript" src="./task2_2RP.js"></script>
     <style>
         body{
