--- a/homework/threejs/camera/camera.html
+++ b/homework/threejs/camera/camera.html
@@ -9,7 +9,7 @@
     <script type="module" src="./camera.js"></script>
     <script type="module" src="./mesh.js"></script>
     <script type="module" src="./animation.js"></script>
-    <script type="module" src="./dat.gui.module.js"></script>    
+    <script type="module" src="../libs/dat.gui.module.js"></script>    
     <style>
         body{
             /* set margin to 0 and overflow to hidden, to go fullscreen */
