renamed cylinder to cone

--- a/homework/threejs/shader_deformation/cone.html
+++ b/homework/threejs/shader_deformation/cone.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Cilinder deformation</title>
+        <title>Cone deformation</title>
         <meta charset="utf-8">
 </head>
  
@@ -10,6 +10,6 @@
    
     <script type="text/javascript" src="../libs/three.js"></script>
     <script type="text/javascript" src="../libs/controls.js"></script>
-    <script type="module" src="./cylinder.js"></script>
+    <script type="module" src="./cone.js"></script>
 </html>
 
